
User-visible changes.

Since 0.6.0 (2006-06-12)
========================
Features
--------

Bugfixes
--------

Minor enhancements
------------------

Since 0.5.0 (2006-05-30)
========================
Features
--------
* differential coverage report: --text-coverage-diff (-D) and --save
  Tells you when you've added new code that was not covered by the tests and
  when code that used to be covered isn't anymore. Integration with vim
  (contributions for other editors/IDEs welcome).
* fully cross-referenced reports, indicating where methods are called from
  and which methods were called for each line (--xrefs)
* cross-referenced report generation is now over 4 times faster for
  applications with deep call stacks (such as Rails apps)

Bugfixes
--------
* comments at EOF are marked now
* better handling of multiline hashes/arrays
* better handling of end/}: support chained method calls and more expressions
  on the same line
* better handling of heredocs with interpolation

Minor enhancements
------------------
* more readable --text-coverage
* set whether comments are "run" by default instead of attaching them to
  the following block of code (--[no-]comments)
* --report-cov-bug can be used to report bugs in the coverage analysis 

Since 0.4.0 (2006-05-22)
========================
Features
--------
* ability to create cross-referenced reports, indicating where methods are
  called from (--callsites)
* more refinements in the heuristics: now several kinds of multi-line quoted
  strings are handled properly
* --include-file to specify files not to be ignored in the report(s)
* implemented a task generator for Rant

Bugfixes
--------
* corrected the LOC counts in the XHTML summaries
* pure-Ruby tracing module works again; was broken in 0.4.0
* RcovTask#ruby_opts fixed; they were being passed to rcov instead of ruby
* solved the DOCTYPE issue (it'd get put at the end of the file under some
  Ruby versions)

Minor enhancements
------------------