@@ -8,6 +8,7 @@ Features
 
 Bugfixes
 --------
+* the SCRIPT_LINES__ workaround works better
 
 Minor enhancements
 ------------------
